# companion_robot

./: README.md
momo/: webrtc_logs_0
pedestrian_detection/: CMakeLists.txt  camera_tracking.cpp  camera_tracking.h  face_ncnn.cpp  main.cpp  object_detection.cpp  object_detection.h  robot_move.cpp  robot_move.h  ssdperson10695.param
pedestrian_detection/src/: anchor_creator.h  kcftracker.cpp  recttools.hpp
